force-app/main/default/objects/CareCloud_Information__c/CareCloud_Information__c.object-meta.xml
<CustomObject>
    <description>CareCloud Providers and Locations</description>
    <label>CareCloud Information</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CareCloud Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>