force-app/main/default/objects/CareCloud_Information__c/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <label>Business ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>