force-app/main/default/objects/CareCloud_Information__c/fields/CareCloud_Id__c.field-meta.xml
<CustomField>
    <fullName>CareCloud_Id__c</fullName>
    <externalId>true</externalId>
    <label>CareCloud Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>