force-app/main/default/objects/CareCloud_Information__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acupuncturist</fullName>
            </value>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Durable Medical Equipment &amp; Medical Supplies</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle Surgery</fullName>
            </value>
            <value>
                <fullName>Multi-Specialty</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Occupational Therapist</fullName>
            </value>
            <value>
                <fullName>Occupational Therapy Assistant</fullName>
            </value>
            <value>
                <fullName>Orthopaedic Surgery</fullName>
            </value>
            <value>
                <fullName>Orthopaedic Surgeryofthe Spine</fullName>
            </value>
            <value>
                <fullName>Pain Medicine</fullName>
            </value>
            <value>
                <fullName>Physical Therapist</fullName>
            </value>
            <value>
                <fullName>Physical Therapy</fullName>
            </value>
            <value>
                <fullName>Physical Therapy Assistant</fullName>
            </value>
            <value>
                <fullName>Physician Assistant</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>