force-app/main/default/objects/CareCloud_Information__c/fields/Specialty_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Taxonomy__c</fullName>
    <label>Specialty Taxonomy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>