force-app/main/default/objects/CareCloud_Information__c/fields/User_Record__c.field-meta.xml
<CustomField>
    <fullName>User_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Record</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CareCloud_Information</relationshipName>
    <type>Lookup</type>
</CustomField>