force-app/main/default/objects/CareCloud_Information__c/fields/Vein__c.field-meta.xml
<CustomField>
    <fullName>Vein__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vein</label>
    <type>Checkbox</type>
</CustomField>