force-app/main/default/objects/CareCloud_Information__c/recordTypes/Visit_Reason.recordType-meta.xml
<RecordType>
    <fullName>Visit_Reason</fullName>
    <active>true</active>
    <label>Visit Reason</label>
</RecordType>