force-app/main/default/objects/CareCloud_Information__c/listViews/Locations.listView-meta.xml
<ListView>
    <fullName>Locations</fullName>
    <columns>NAME</columns>
    <columns>CareCloud_Id__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CareCloud_Information__c.Location</value>
    </filters>
    <label>Locations</label>
</ListView>