force-app/main/default/objects/CareCloud_Information__c/listViews/Providers.listView-meta.xml
<ListView>
    <fullName>Providers</fullName>
    <columns>NAME</columns>
    <columns>CareCloud_Id__c</columns>
    <columns>User_Record__c</columns>
    <columns>Active__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CareCloud_Information__c.Provider</value>
    </filters>
    <label>Providers</label>
</ListView>