force-app/main/default/objects/CareCloud_Information__c/listViews/Visit_Reason.listView-meta.xml
<ListView>
    <fullName>Visit_Reason</fullName>
    <columns>NAME</columns>
    <columns>CareCloud_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CareCloud_Information__c.Visit_Reason</value>
    </filters>
    <label>Visit Reason</label>
</ListView>